# egui_wgpu_backend

./: Cargo.toml
src/: lib.rs
src/shader/: egui.frag.spirv  egui.vert.spirv
