[package]
name = "egui_wgpu_backend"
version = "0.5.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "96ca1e41dd4ede12bcb3220712ab5c8c2fd688ad"}
epi = "0.10.0"
bytemuck = "1.5.0"
